--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div>
+    <div class="menu__wrap">
         <input type="checkbox" class="toggler">
         <div class="hamburger">
             <div></div>
